[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = 'carl-ff'
version = '1.0.0'
dependencies = [
  'cryptography'
]
requires-python = '>=3.10'
authors = [
  {name = 'Tobias Neitzel (@qtc_de)'},
]
maintainers = [
  {name = 'Tobias Neitzel (@qtc_de)'}
]
description = 'Firefox ClientAuthenticationRememberList Parser'
readme = 'README.md'
license = {file = 'LICENSE'}
keywords = ['firefox', 'carl-ff', 'ClientAuthenticationRememberList']
classifiers = [
  'Programming Language :: Python :: 3',
    'Operating System :: Unix',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
]

[project.urls]
Homepage = 'https://github.com/qtc-de/carl-ff'
Documentation = 'https://github.com/qtc-de/carl-ff'
Repository = 'https://github.com/qtc-de/carl-ff'
'Bug Tracker' = 'https://github.com/qtc-de/carl-ff/issues'
Changelog = 'https://github.com/qtc-de/carl-ff/blob/main/CHANGELOG.md'

[project.scripts]
carl-ff = 'carl_ff.main:main'
